[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerBody.gd" type="Script" id=2]

[sub_resource type="RayShape" id=1]
length = 3.0

[sub_resource type="CylinderShape" id=2]
radius = 0.9
height = 1.0

[sub_resource type="CylinderMesh" id=3]
height = 3.0

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="Body" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
collision_layer = 2
script = ExtResource( 2 )

[node name="RayShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CylinderShape" type="CollisionShape" parent="Body"]
shape = SubResource( 2 )

[node name="HeadCamera" type="Camera" parent="Body"]
current = true
fov = 90.0
far = 90.0

[node name="CursorRay" type="RayCast" parent="Body/HeadCamera"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collision_mask = 4
collide_with_areas = true

[node name="ShootRay" type="RayCast" parent="Body/HeadCamera"]
enabled = true
cast_to = Vector3( 0, 0, -20 )
collision_mask = 13
collide_with_areas = true

[node name="RemoteTransform" type="RemoteTransform" parent="Body/HeadCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
remote_path = NodePath("../../../PlayerModel")
update_rotation = false
update_scale = false

[node name="CameraTargetPosition" type="Position3D" parent="Body"]

[node name="PlayerModel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../Body")
material/0 = null
